--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph
 annotated-types==0.7.0
 anyio==4.8.0
 attrs==24.3.0
@@ -12,7 +12,7 @@ distlib==0.3.9
 exceptiongroup==1.2.2
 filelock==3.17.0
 fsspec==2025.3.0
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+future
 google-api-core==2.23.0
 google-api-python-client==2.165.0
 google-auth==2.36.0
@@ -37,7 +37,7 @@ idna==3.10
 Jinja2==3.1.6
 joblib==1.4.2
 llama_cpp_python==0.3.7
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+macholib
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.2.1
@@ -74,7 +74,7 @@ scikit-learn==1.6.1
 scipy==1.13.1
 selenium==4.27.1
 sentence-transformers==3.4.1
-six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+six
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
